fix alignments

--- a/instructorUI/style1.css
+++ b/instructorUI/style1.css
@@ -37,6 +37,7 @@ h3, p{
 h4{
     margin: 0%;
     margin-bottom: 20px;
+    margin-bottom: 20px;
 }
 
 /*@media print{@page {size: landscape}}*/
