--- a/vpUI/vp.css
+++ b/vpUI/vp.css
@@ -1,5 +1,10 @@
 
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
 
+        * {
+            margin: 0%;
+            font-family: 'Montserrat', sans-serif;
+        }
 body{
     background-color: #0C1821;
 }
@@ -46,7 +51,8 @@ img{
 }
 main{
     background-color: burlywood;
-    width: 97.8%;
+    height: 60%;
+    width: 100%;
     border-bottom-right-radius: 10pt;
     box-shadow: 10px 20px 20px;
 }
@@ -54,6 +60,12 @@ main{
     background-color: white;
     margin: 15%;
     
+}
+ul{
+    font-weight: 900;
+    text-align: left;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 .subsContainer{
     text-align: center;
